<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_star_wars">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/custom_name_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:src="@drawable/starwars_logo_invisible"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Mark Kashcheev"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/gender_image"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/height"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/height_image"
        app:layout_constraintTop_toBottomOf="@+id/gender_text" />

    <TextView
        android:id="@+id/birth_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/birth_year"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/calendar_image"
        app:layout_constraintTop_toBottomOf="@+id/mass_text" />

    <TextView
        android:id="@+id/mass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/mass"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/weight_image"
        app:layout_constraintTop_toBottomOf="@+id/height_text" />

    <TextView
        android:id="@+id/gender_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/gender_male"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/gender_image"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <TextView
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/example_height"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/height_image"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/example_year"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/calendar_image"
        app:layout_constraintTop_toBottomOf="@+id/birth_year" />

    <TextView
        android:id="@+id/mass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="2dp"
        android:text="@string/example_mass"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/weight_image"
        app:layout_constraintTop_toBottomOf="@+id/mass" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/star_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_hollow_favourite" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <ImageView
        android:id="@+id/calendar_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_image"
        app:srcCompat="@drawable/ic_birth_year" />

    <ImageView
        android:id="@+id/gender_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        app:srcCompat="@drawable/ic_male_gender" />

    <ImageView
        android:id="@+id/height_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_image"
        app:srcCompat="@drawable/ic_height" />

    <ImageView
        android:id="@+id/weight_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_image"
        app:srcCompat="@drawable/ic_weight" />

</androidx.constraintlayout.widget.ConstraintLayout>